--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -263,6 +263,7 @@
 }
 
 .u-section-3 .u-text-4 {
+  font-weight: 700;
   margin: 17px 0 0;
 }
 
@@ -291,6 +292,7 @@
 }
 
 .u-section-3 .u-text-7 {
+  font-weight: 700;
   margin: 17px 0 0;
 }
 
@@ -319,6 +321,7 @@
 }
 
 .u-section-3 .u-text-10 {
+  font-weight: 700;
   margin: 17px 0 0;
 }
 
@@ -560,5 +563,183 @@
 
   .u-section-4 .u-layout-cell-1 {
     min-height: 100px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 803px;
+  }
+
+  .u-section-4 .u-text-3 {
+    width: auto;
+  }
+} .u-section-5 {
+  min-height: 66px;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 655px;
+}
+
+.u-section-5 .u-layout-wrap-1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-layout-cell-1 {
+  min-height: 655px;
+}
+
+.u-section-5 .u-container-layout-1 {
+  padding: 12px 52px;
+}
+
+.u-section-5 .u-image-1 {
+  width: 450px;
+  height: 75px;
+  margin: 118px auto 0;
+}
+
+.u-section-5 .u-text-1 {
+  margin: 23px 8px 0;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 53px 8px 0;
+}
+
+.u-section-5 .u-layout-cell-2 {
+  min-height: 655px;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 30px 60px;
+}
+
+.u-section-5 .u-image-2 {
+  width: 368px;
+  height: 445px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1199px) {
+   .u-section-5 {
+    min-height: 318px;
+  }
+
+  .u-section-5 .u-sheet-1 {
+    min-height: 203px;
+  }
+
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 540px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 366px;
+    height: 61px;
+  }
+
+  .u-section-5 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 540px;
+    background-position: 50% 50%;
+  }
+
+  .u-section-5 .u-image-2 {
+    width: 350px;
+    height: 423px;
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-5 {
+    min-height: 66px;
+  }
+
+  .u-section-5 .u-sheet-1 {
+    min-height: 77px;
+  }
+
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 300px;
+    height: 50px;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 414px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-5 .u-image-2 {
+    width: 300px;
+    height: 363px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 621px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 602px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-1 {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 391px;
   }
 }
