--- a/nicepage.css
+++ b/nicepage.css
@@ -42788,6 +42788,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-1 {
   font-size: 1rem;
   letter-spacing: normal;
+  font-weight: 400;
 }
 
 .u-header .u-nav-2 {
