--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -221,7 +221,7 @@
     margin-bottom: 0;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 421px;
+  min-height: 422px;
 }
 
 .u-section-3 .u-text-1 {
@@ -397,7 +397,7 @@
     font-size: 1.875rem;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 805px;
+  min-height: 879px;
 }
 
 .u-section-4 .u-layout-wrap-1 {
@@ -436,7 +436,7 @@
 }
 
 .u-section-4 .u-layout-cell-2 {
-  min-height: 705px;
+  min-height: 789px;
   background-image: none;
 }
 
@@ -479,6 +479,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 805px;
+  }
+
   .u-section-4 .u-layout-wrap-1 {
     margin-top: 63px;
   }
@@ -492,7 +496,7 @@
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 581px;
+    min-height: 651px;
   }
 
   .u-section-4 .u-group-1 {
@@ -612,22 +616,57 @@
 }
 
 .u-section-5 .u-container-layout-2 {
-  padding: 30px 60px;
+  padding: 0 19px;
 }
 
-.u-section-5 .u-image-2 {
-  width: 368px;
-  height: 445px;
-  margin: 0 auto;
+.u-section-5 .u-gallery-1 {
+  height: 647px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.u-section-5 .u-carousel-indicators-1 {
+  position: absolute;
+  bottom: 10px;
+}
+
+.u-section-5 .u-carousel-item-1 {
+  margin-right: 0;
+}
+
+.u-section-5 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-5 .u-carousel-item-2 {
+  margin-right: 0;
+}
+
+.u-section-5 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-5 .u-carousel-control-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  padding: 4px;
+}
+
+.u-section-5 .u-carousel-control-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  padding: 4px;
 }
 
 @media (max-width: 1199px) {
-   .u-section-5 {
-    min-height: 318px;
-  }
-
   .u-section-5 .u-sheet-1 {
-    min-height: 203px;
+    min-height: 540px;
   }
 
   .u-section-5 .u-layout-cell-1 {
@@ -657,23 +696,14 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 540px;
     background-position: 50% 50%;
-  }
-
-  .u-section-5 .u-image-2 {
-    width: 350px;
-    height: 423px;
+    min-height: 540px;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-5 {
-    min-height: 66px;
-  }
-
   .u-section-5 .u-sheet-1 {
-    min-height: 77px;
+    min-height: 100px;
   }
 
   .u-section-5 .u-layout-cell-1 {
@@ -693,17 +723,7 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 414px;
-  }
-
-  .u-section-5 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-5 .u-image-2 {
-    width: 300px;
-    height: 363px;
+    min-height: 100px;
   }
 }
 
@@ -718,10 +738,6 @@
     width: auto;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-5 .u-layout-cell-2 {
-    min-height: 621px;
   }
 
   .u-section-5 .u-container-layout-2 {
@@ -758,6 +774,16 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 391px;
+    min-height: 647px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-5 .u-gallery-1 {
+    height: 414px;
+    margin-top: 93px;
   }
 }
