--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 692px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,38 +13,97 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 60px auto;
+  margin: 123px auto 0;
+}
+
+.u-section-1 .u-image-1 {
+  width: 300px;
+  height: 300px;
+  --animation-custom_in-translate_x: 50px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 180deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 32px auto 0 334px;
+}
+
+.u-section-1 .u-text-2 {
+  --animation-custom_in-translate_x: 50px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 180deg;
+  --animation-custom_in-scale: 0.3;
+  font-size: 1.125rem;
+  margin: -219px 317px 60px 558px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 330px;
+    min-height: 621px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: -213px;
+    margin-right: 141px;
+    margin-left: 534px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 253px;
+  .u-section-1 .u-text-2 {
+    margin-left: 424px;
+    margin-right: 31px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 190px;
+    min-height: 579px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: 240px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 258px;
+    margin-right: 17px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 120px;
+    min-height: 435px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 32px;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 206px;
+    height: 206px;
+    margin-top: 1px;
+    margin-left: 38px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1rem;
+    margin-top: -169px;
+    margin-right: 0;
+    margin-left: 152px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 204px;
+  min-height: 201px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -95,85 +154,38 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 171px;
+    min-height: 168px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 173px;
+    min-height: 156px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-2 .u-icon-1 {
-    margin-left: 230px;
+    margin-left: 248px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 173px;
-  }
-
-  .u-section-2 .u-btn-1 {
-    padding-right: 4px;
-    padding-left: 3px;
+    min-height: 156px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 324px;
+    min-height: 112px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 249px;
-  }
-
-  .u-section-2 .u-text-1 {
-    width: auto;
+    min-height: 100px;
   }
 
   .u-section-2 .u-icon-1 {
-    margin-left: 197px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 249px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 14px;
-    padding-bottom: 14px;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-top: 177px;
-    margin-bottom: -16px;
-    margin-left: -444px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 215px;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 188px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: 17px;
-  }
-
-  .u-section-2 .u-icon-1 {
-    width: 32px;
-    height: 32px;
-    margin-top: -32px;
-    margin-left: 151px;
-    padding: 0;
+    margin-left: 233px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -181,42 +193,22 @@
   }
 }
 
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 492px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 60px;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 101px;
+    min-height: 212px;
   }
 
   .u-section-2 .u-icon-1 {
-    width: 22px;
-    height: 22px;
-    margin-top: -28px;
-    margin-left: 74px;
+    margin-left: 178px;
   }
+}
 
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 129px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-top: 17px;
-    margin-left: auto;
-    margin-bottom: 0;
+@media (max-width: 575px) {
+  .u-section-2 .u-icon-1 {
+    margin-left: 112px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 780px;
+  min-height: 818px;
 }
 
 .u-section-3 .u-layout-wrap-1 {
@@ -346,57 +338,75 @@
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 2px;
+    min-height: 671px;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 268px;
+    min-height: 431px;
     background-position: 50% 50%;
   }
 
   .u-section-3 .u-layout-cell-2 {
-    min-height: 268px;
+    min-height: 431px;
   }
 
   .u-section-3 .u-layout-cell-3 {
-    min-height: 268px;
+    min-height: 431px;
     background-position: 50% 50%;
   }
 
   .u-section-3 .u-layout-cell-4 {
-    min-height: 268px;
+    min-height: 431px;
   }
 
   .u-section-3 .u-layout-cell-5 {
-    min-height: 268px;
+    min-height: 444px;
   }
 
   .u-section-3 .u-image-3 {
-    min-height: 268px;
+    min-height: 444px;
   }
 
   .u-section-3 .u-layout-cell-7 {
-    min-height: 268px;
+    min-height: 444px;
+  }
+
+  .u-section-3 .u-container-layout-7 {
+    padding-right: 11px;
+    padding-left: 23px;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-top: 27px;
+    margin-left: 7px;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   .u-section-3 .u-layout-cell-8 {
-    min-height: 268px;
+    min-height: 444px;
     background-position: 50% 50%;
   }
 
   .u-section-3 .u-image-4 {
     width: 235px;
     height: 224px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 948px;
+    min-height: 901px;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 411px;
+    min-height: 660px;
     order: 0;
   }
 
@@ -406,7 +416,7 @@
   }
 
   .u-section-3 .u-layout-cell-3 {
-    min-height: 411px;
+    min-height: 660px;
     order: 3;
   }
 
@@ -421,7 +431,7 @@
   }
 
   .u-section-3 .u-image-3 {
-    min-height: 411px;
+    min-height: 680px;
     order: 0;
   }
 
@@ -431,18 +441,18 @@
   }
 
   .u-section-3 .u-layout-cell-8 {
-    min-height: 411px;
+    min-height: 680px;
     order: 3;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1852px;
+    min-height: 2847px;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 617px;
+    min-height: 990px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -456,7 +466,7 @@
   }
 
   .u-section-3 .u-layout-cell-3 {
-    min-height: 617px;
+    min-height: 990px;
     order: 2;
   }
 
@@ -475,7 +485,7 @@
   }
 
   .u-section-3 .u-image-3 {
-    min-height: 617px;
+    min-height: 1020px;
   }
 
   .u-section-3 .u-container-layout-6 {
@@ -493,26 +503,30 @@
   }
 
   .u-section-3 .u-layout-cell-8 {
-    min-height: 617px;
+    min-height: 1020px;
     order: 2;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 2297px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: 0;
+    min-height: 1931px;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 388px;
+    min-height: 623px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 158px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: auto;
   }
 
   .u-section-3 .u-layout-cell-3 {
-    min-height: 388px;
+    min-height: 623px;
   }
 
   .u-section-3 .u-image-2 {
@@ -520,15 +534,31 @@
   }
 
   .u-section-3 .u-image-3 {
-    min-height: 388px;
+    min-height: 642px;
+    background-position: 34.51% 50%;
   }
 
   .u-section-3 .u-layout-cell-7 {
-    min-height: 202px;
+    min-height: 295px;
+  }
+
+  .u-section-3 .u-text-7 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-layout-cell-8 {
-    min-height: 388px;
+    min-height: 555px;
+  }
+
+  .u-section-3 .u-image-4 {
+    margin-top: 197px;
+    margin-left: auto;
+    margin-right: auto;
   }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/FoilSwatch2017.jpg");
@@ -588,6 +618,7 @@
 }
 
 .u-section-5 .u-text-1 {
+  font-weight: normal;
   margin: 60px auto 0;
 }
 
@@ -598,7 +629,6 @@
 
 .u-section-5 .u-repeater-1 {
   min-height: 233px;
-  grid-auto-columns: calc(33.3333% - 3.33333px);
   grid-template-columns: calc(33.3333% - 3.33333px) calc(33.3333% - 3.33333px) calc(33.3333% - 3.33333px);
   grid-gap: 5px 5px;
 }
@@ -646,8 +676,6 @@
 
   .u-section-5 .u-repeater-1 {
     min-height: 232px;
-    grid-auto-columns: calc(33.333333333333336% - 3.33333px);
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 3.33333px));
   }
 }
 
@@ -658,8 +686,7 @@
 
   .u-section-5 .u-repeater-1 {
     min-height: 540px;
-    grid-auto-columns: calc(50% - 2.4999975px);
-    grid-template-columns: repeat(2, calc(50% - 2.4999975px));
+    grid-template-columns: calc(50% - 2.5px) calc(50% - 2.5px);
   }
 }
 
@@ -669,7 +696,6 @@
   }
 
   .u-section-5 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
     grid-template-columns: 100%;
   }
 }
@@ -681,10 +707,6 @@
 
   .u-section-5 .u-list-1 {
     width: 340px;
-  }
-
-  .u-section-5 .u-repeater-1 {
-    grid-auto-columns: 100%;
   }
 
   .u-section-5 .u-image-1 {
@@ -703,6 +725,7 @@
 }
 
 .u-section-6 .u-text-1 {
+  font-weight: normal;
   margin: 30px auto 0;
 }
 
