--- a/nicepage.css
+++ b/nicepage.css
@@ -42834,6 +42834,11 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-line-1 {
   transform-origin: left center 0px;
   width: 1140px;
+  margin: 30px auto 0 0;
+}
+
+.u-footer .u-text-1 {
+  font-size: 0.75rem;
   margin: 30px auto 60px 0;
 }
 @media (max-width: 1199px) {
