--- a/nicepage.css
+++ b/nicepage.css
@@ -42773,35 +42773,281 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 /*end-variables sitestylecss*/
- .u-header {
+.u-header .u-section-row-1 {
   background-image: none;
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 86px;
+}
+
+.u-header .u-social-icons-1 {
+  white-space: nowrap;
+  height: 27px;
+  min-height: 16px;
+  width: 101px;
+  min-width: 68px;
+  margin: 30px auto 0 0;
+}
+
+.u-header .u-icon-1 {
+  color: rgb(59, 89, 152) !important;
+}
+
+.u-header .u-icon-2 {
+  color: rgb(85, 172, 238) !important;
+}
+
+.u-header .u-icon-3 {
+  color: rgb(197, 54, 164) !important;
 }
 
 .u-header .u-menu-1 {
-  margin: 22px auto;
+  margin: -32px auto 21px;
 }
 
 .u-header .u-nav-1 {
+  font-weight: 700;
   font-size: 1rem;
   letter-spacing: normal;
-  font-weight: 400;
 }
 
 .u-header .u-nav-2 {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-weight: 700;
+}
+.u-header .u-sheet-2 {
+  min-height: 133px;
+}
+
+.u-header .u-image-1 {
+  width: 498px;
+  height: 97px;
+  margin: 18px auto 0 116px;
+}
+
+.u-header .u-image-2 {
+  width: 82px;
+  height: 100px;
+  margin: -98px auto 0 19px;
+}
+
+.u-header .u-group-elements-1 {
+  width: 291px;
+  min-height: 79px;
+  height: auto;
+  margin: -89px 84px 27px auto;
+}
+
+.u-header .u-btn-1 {
+  background-image: none;
+  font-size: 2.25rem;
+  margin: 18px 0 0;
+  padding: 0;
+}
+
+.u-header .u-text-1 {
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  margin: -79px auto 0 35px;
+}
+.u-header .u-sheet-3 {
+  min-height: 100px;
+}
+
+.u-header .u-group-elements-2 {
+  width: 291px;
+  min-height: 79px;
+  height: auto;
+  margin: 11px auto;
+}
+
+.u-header .u-btn-2 {
+  background-image: none;
+  font-size: 1rem;
+}
+
+.u-header .u-text-2 {
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  font-size: 1.125rem;
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
-    width: auto;
+    margin-top: -32px;
+  }
+}
+@media (max-width: 1199px) {
+  .u-header .u-sheet-2 {
+    min-height: 134px;
+  }
+
+  .u-header .u-image-1 {
+    width: 481px;
+    height: 79px;
+    margin-top: 28px;
+    margin-left: 101px;
+  }
+
+  .u-header .u-image-2 {
+    width: 82px;
+    margin-top: -89px;
+  }
+
+  .u-header .u-group-elements-1 {
+    margin-right: 16px;
+    margin-bottom: 28px;
   }
 }
 
 
+@media (max-width: 991px) {
+  .u-header .u-sheet-2 {
+    min-height: 101px;
+  }
 
+  .u-header .u-image-1 {
+    margin-top: 1px;
+    margin-left: 161px;
+  }
+
+  .u-header .u-image-2 {
+    margin-bottom: -9px;
+    margin-left: 79px;
+  }
+
+  .u-header .u-group-elements-1 {
+    margin-top: -89px;
+  }
+}
+@media (max-width: 991px) {
+  .u-header .u-sheet-3 {
+    min-height: 88px;
+  }
+
+  .u-header .u-group-elements-2 {
+    width: 377px;
+    min-height: 88px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+  }
+
+  .u-header .u-btn-2 {
+    font-size: 1.875rem;
+    margin: 0 auto;
+  }
+
+  .u-header .u-text-2 {
+    font-size: 1.875rem;
+    width: 377px;
+    margin: -31px auto 0;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-menu-1 {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-sheet-2 {
+    min-height: 112px;
+  }
+
+  .u-header .u-image-1 {
+    width: 454px;
+    height: 66px;
+    margin-top: 27px;
+    margin-right: 0;
+    margin-left: auto;
+  }
+
+  .u-header .u-image-2 {
+    width: 95px;
+    height: 86px;
+    margin-top: -76px;
+    margin-bottom: 10px;
+    margin-left: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-sheet-3 {
+    min-height: 71px;
+  }
+
+  .u-header .u-group-elements-2 {
+    width: 303px;
+    min-height: 71px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .u-header .u-text-2 {
+    font-size: 1rem;
+    width: 213px;
+    margin-top: -71px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 73px;
+  }
+
+  .u-header .u-social-icons-1 {
+    margin-top: 17px;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: -40px;
+    margin-bottom: 4px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-sheet-2 {
+    min-height: 140px;
+  }
+
+  .u-header .u-image-1 {
+    height: 49px;
+    margin-top: 83px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-header .u-image-2 {
+    width: 83px;
+    height: 83px;
+    margin-top: -132px;
+    margin-left: auto;
+    margin-bottom: 57px;
+  }
+
+  .u-header .u-group-elements-1 {
+    margin-right: auto;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-sheet-3 {
+    min-height: 79px;
+  }
+
+  .u-header .u-group-elements-2 {
+    width: 291px;
+    min-height: 79px;
+  }
+
+  .u-header .u-btn-2 {
+    font-size: 2.25rem;
+    margin-top: 18px;
+    margin-right: -49px;
+    margin-left: 0;
+    padding: 0;
+  }
+
+  .u-header .u-text-2 {
+    width: 205px;
+    margin-top: -79px;
+  }
+}
 .u-footer .u-sheet-1 {
   min-height: 299px;
 }
