--- a/Copy-of-EcoShield-Windows.css
+++ b/Copy-of-EcoShield-Windows.css
@@ -1194,7 +1194,7 @@
 
 .u-section-8 .u-layout-wrap-1 {
   margin-top: 60px;
-  margin-bottom: 34px;
+  margin-bottom: 0;
 }
 
 .u-section-8 .u-layout-cell-1 {
