--- a/Copy-of-EcoShield-Windows.css
+++ b/Copy-of-EcoShield-Windows.css
@@ -1556,119 +1556,6 @@
   padding: 0;
 }
 
-.u-section-9 .u-gallery-1 {
-  height: 583px;
-  width: 562px;
-  margin: 0 auto;
-}
-
-.u-section-9 .u-carousel-indicators-1 {
-  position: absolute;
-  bottom: 10px;
-}
-
-.u-section-9 .u-carousel-item-1 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-2 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-3 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-4 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-5 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-6 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-6 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-7 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-item-8 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-over-slide-8 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-9 .u-carousel-control-1 {
-  position: absolute;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-.u-section-9 .u-carousel-control-2 {
-  position: absolute;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-}
-
 @media (max-width: 1199px) {
   .u-section-9 .u-sheet-1 {
     min-height: 540px;
@@ -1704,15 +1591,11 @@
     background-position: 50% 50%;
     min-height: 540px;
   }
-
-  .u-section-9 .u-gallery-1 {
-    width: 470px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-9 .u-sheet-1 {
-    min-height: 100px;
+    min-height: 414px;
   }
 
   .u-section-9 .u-layout-cell-1 {
@@ -1732,21 +1615,17 @@
   }
 
   .u-section-9 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-9 .u-gallery-1 {
-    width: 360px;
+    min-height: 414px;
   }
 }
 
 @media (max-width: 767px) {
    .u-section-9 {
-    min-height: 166px;
+    min-height: 373px;
   }
 
   .u-section-9 .u-sheet-1 {
-    min-height: 1040px;
+    min-height: 721px;
   }
 
   .u-section-9 .u-container-layout-1 {
@@ -1760,11 +1639,19 @@
     margin-right: initial;
     margin-left: initial;
   }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 621px;
+  }
 }
 
 @media (max-width: 575px) {
+   .u-section-9 {
+    min-height: 143px;
+  }
+
   .u-section-9 .u-sheet-1 {
-    min-height: 1261px;
+    min-height: 491px;
   }
 
   .u-section-9 .u-layout-wrap-1 {
@@ -1797,7 +1684,7 @@
     margin-right: 30px;
   }
 
-  .u-section-9 .u-gallery-1 {
-    width: 340px;
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 391px;
   }
 }
