--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -120,16 +120,29 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 892px;
+    min-height: 1137px;
   }
 
   .u-section-1 .u-text-2 {
     margin-right: 170px;
   }
 
+  .u-section-1 .u-group-1 {
+    min-height: 158px;
+    margin-top: 104px;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 18px;
+  }
+
+  .u-section-1 .u-group-2 {
+    margin-top: 170px;
   }
 }
 
@@ -903,6 +916,17 @@
   font-size: 1.3em;
 }
 
+@media (max-width: 767px) {
+  .u-section-4 .u-btn-1 {
+    font-size: 1.25rem;
+    margin-top: 40px;
+    margin-right: -10px;
+    margin-bottom: 40px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
     min-height: 97px;
@@ -912,8 +936,7 @@
     font-size: 0.625rem;
     margin-top: 29px;
     margin-bottom: 29px;
-    padding-left: 0;
-    padding-right: 0;
+    margin-right: 0;
   }
 } .u-section-5 {
   background-image: none;
@@ -989,12 +1012,12 @@
 }
 
 .u-section-7 .u-text-1 {
-  margin: 278px auto 0;
+  margin: 210px auto 0;
 }
 
 .u-section-7 .u-text-2 {
   font-size: 1.875rem;
-  margin: 20px 0 60px;
+  margin: 53px 0 60px;
 }
 
 @media (max-width: 1199px) {
@@ -1020,7 +1043,19 @@
 
 @media (max-width: 767px) {
   .u-section-7 .u-sheet-1 {
-    min-height: 420px;
+    min-height: 554px;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: auto;
+    margin-top: 114px;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 366px;
+    margin: 225px auto 41px;
   }
 }
 
@@ -1030,7 +1065,6 @@
   }
 
   .u-section-7 .u-text-1 {
-    width: auto;
     margin-top: 295px;
     margin-left: 0;
     margin-right: 0;
@@ -1040,8 +1074,6 @@
     font-size: 1.5rem;
     width: auto;
     margin-top: 99px;
-    margin-left: 0;
-    margin-right: 0;
   }
 } .u-section-8 {
   background-image: none;
