--- a/nicepage.css
+++ b/nicepage.css
@@ -43560,25 +43560,14 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 149px;
-}
-
-.u-header .u-image-1 {
-  width: 522px;
-  height: 364px;
-  margin: -93px auto 0;
-}
-
-.u-header .u-logo-image-1 {
-  width: 100%;
-  height: 100%;
+  min-height: 145px;
 }
 
 .u-header .u-btn-1 {
   --radius: 50px;
   font-size: 1.125rem;
   background-image: none;
-  margin: -214px 21px 0 auto;
+  margin: 52px 21px 0 auto;
   padding: 8px 27px 8px 26px;
 }
 
@@ -43586,14 +43575,28 @@ a.u-link.u-text-hover-grey-90:hover {
   --radius: 50px;
   font-size: 1.125rem;
   background-image: none;
-  margin: -41px auto 6px 21px;
+  margin: -41px auto 0 21px;
   padding: 8px 27px 8px 26px;
 }
-.u-header .u-section-row-2 {
+
+.u-header .u-image-1 {
+  width: 522px;
+  height: 364px;
+  margin: -189px auto -122px;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+.u-header .u-sheet-2 {
+  min-height: 100px;
+}
+.u-header .u-section-row-3 {
   background-image: none;
 }
 
-.u-header .u-sheet-2 {
+.u-header .u-sheet-3 {
   min-height: 36px;
 }
 
@@ -43611,67 +43614,79 @@ a.u-link.u-text-hover-grey-90:hover {
   letter-spacing: 0px;
 }
 @media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    width: 497px;
-    height: 347px;
-    margin-top: -86px;
-  }
-
   .u-header .u-btn-1 {
-    margin-top: -207px;
     margin-right: 0;
   }
 
   .u-header .u-btn-2 {
-    margin-top: -38px;
-    margin-bottom: 51px;
     margin-left: 0;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-header .u-sheet-1 {
-    min-height: 277px;
-  }
-
-  .u-header .u-btn-1 {
-    margin-top: -41px;
-    margin-right: auto;
-  }
-
-  .u-header .u-btn-2 {
-    margin-top: -102px;
-    margin-left: auto;
-    margin-bottom: 60px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-header .u-btn-2 {
-    margin-top: -102px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 278px;
   }
 
   .u-header .u-image-1 {
-    width: 530px;
-    height: 370px;
-    margin-top: -92px;
-    margin-left: -95px;
-    margin-right: -95px;
+    margin-top: -189px;
+  }
+}
+
+
+@media (max-width: 991px) {
+  .u-header .u-sheet-1 {
+    min-height: 146px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -115px;
+    margin-top: 53px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-header .u-btn-2 {
-    margin-top: 17px;
-    margin-bottom: 17px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-header .u-image-1 {
+    margin-top: -189px;
+    margin-bottom: -122px;
+  }
+}
+
+
+@media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: 203px;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: 150px;
+    margin-right: auto;
+  }
+
+  .u-header .u-image-1 {
+    margin-top: -284px;
+    margin-bottom: -67px;
+  }
+}
+
+
+@media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 186px;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: 146px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 7px;
+  }
+
+  .u-header .u-image-1 {
+    margin: -273px -91px -80px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-sheet-2 {
+    min-height: 124px;
   }
 }
 
