--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -228,10 +228,12 @@
     width: auto;
     margin: 88px 0 16px;
   }
-}.u-block-4994-6 {
+}.u-block-4994-11 {
   position: absolute;
   top: auto;
-  bottom: 21px;
+  left: auto;
+  right: calc(((100% - 1140px) / 2)  + 520px);
+  bottom: 8px;
 }
 
 .u-block-4994-9 {
@@ -253,6 +255,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-block-4994-11 {
+    right: calc(((100% - 940px) / 2)  + 420px);
+  }
+
   .u-block-4994-9 {
     left: calc(((100% - 940px) / 2)  + 298px);
   }
@@ -263,6 +269,10 @@
 }
 
 @media (max-width: 991px) {
+  .u-block-4994-11 {
+    right: calc(((100% - 720px) / 2)  + 310px);
+  }
+
   .u-block-4994-9 {
     left: calc(((100% - 720px) / 2)  + 188px);
   }
@@ -273,6 +283,10 @@
 }
 
 @media (max-width: 767px) {
+  .u-block-4994-11 {
+    right: calc(((100% - 540px) / 2)  + 220px);
+  }
+
   .u-block-4994-9 {
     left: calc(((100% - 540px) / 2)  + 98px);
   }
@@ -283,6 +297,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-block-4994-11 {
+    right: calc(((100% - 340px) / 2)  + 120px);
+  }
+
   .u-block-4994-9 {
     left: calc(((100% - 340px) / 2)  + -2px);
   }
@@ -397,7 +415,7 @@
 
 @media (max-width: 767px) {
   .u-section-3-1 .u-sheet-1 {
-    min-height: 851px;
+    min-height: 797px;
   }
 
   .u-section-3-1 .u-layout-wrap-1 {
@@ -415,22 +433,29 @@
   }
 
   .u-section-3-1 .u-text-2 {
-    width: 540px;
+    width: auto;
+    margin-top: 402px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3-1 .u-image-1 {
-    width: 540px;
     height: 465px;
+    margin-top: 46px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-3-1 .u-text-3 {
-    width: 540px;
+    width: auto;
+    margin: 60px 0 42px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3-1 .u-sheet-1 {
-    min-height: 679px;
+    min-height: 545px;
   }
 
   .u-section-3-1 .u-layout-wrap-1 {
@@ -438,17 +463,21 @@
   }
 
   .u-section-3-1 .u-text-2 {
-    width: 340px;
+    margin-top: 393px;
   }
 
   .u-section-3-1 .u-image-1 {
-    width: 340px;
     height: 293px;
+    margin-top: 17px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3-1 .u-text-3 {
     font-size: 1.25rem;
-    width: 340px;
+    margin-top: 51px;
+    margin-bottom: 17px;
   }
 }
 
@@ -502,11 +531,11 @@
   }
 
   .u-section-3-2 .u-image-1 {
-    margin-top: 158px;
+    margin-top: 116px;
   }
 
   .u-section-3-2 .u-text-1 {
-    margin-top: -641px;
+    margin-top: -599px;
   }
 
   .u-section-3-2 .u-text-2 {
@@ -517,26 +546,27 @@
 
 @media (max-width: 767px) {
   .u-section-3-2 .u-sheet-1 {
-    min-height: 907px;
+    min-height: 809px;
   }
 
   .u-section-3-2 .u-image-1 {
-    margin-top: 195px;
+    margin-top: 99px;
   }
 
   .u-section-3-2 .u-text-1 {
     font-size: 2.25rem;
-    margin-top: -639px;
+    margin-top: -586px;
   }
 
   .u-section-3-2 .u-text-2 {
-    margin-top: 415px;
+    margin-top: 588px;
+    margin-bottom: 49px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3-2 .u-sheet-1 {
-    min-height: 540px;
+    min-height: 543px;
   }
 
   .u-section-3-2 .u-image-1 {
@@ -552,7 +582,8 @@
 
   .u-section-3-2 .u-text-2 {
     font-size: 1.25rem;
-    margin-top: 322px;
+    margin-top: 363px;
+    margin-bottom: 19px;
   }
 }
 
@@ -594,18 +625,20 @@
   }
 
   .u-section-3-3 .u-image-1 {
-    margin-top: 84px;
+    margin-top: 43px;
   }
 
   .u-section-3-3 .u-text-2 {
-    width: 720px;
-    margin-top: 19px;
+    width: auto;
+    margin-top: 32px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3-3 .u-sheet-1 {
-    min-height: 647px;
+    min-height: 774px;
   }
 
   .u-section-3-3 .u-text-1 {
@@ -613,7 +646,7 @@
   }
 
   .u-section-3-3 .u-text-2 {
-    width: 540px;
+    margin-bottom: 58px;
   }
 }
 
@@ -636,9 +669,9 @@
   }
 
   .u-section-3-3 .u-text-2 {
-    width: auto;
     font-size: 1.25rem;
-    margin: 21px 0 0;
+    margin-top: 21px;
+    margin-bottom: 0;
   }
 }
 
@@ -672,7 +705,7 @@
 
 @media (max-width: 991px) {
   .u-section-3-4 .u-sheet-1 {
-    min-height: 851px;
+    min-height: 778px;
   }
 
   .u-section-3-4 .u-text-1 {
@@ -681,17 +714,18 @@
   }
 
   .u-section-3-4 .u-image-1 {
-    margin-top: 82px;
+    margin-top: 19px;
   }
 
   .u-section-3-4 .u-text-2 {
-    width: 720px;
+    width: auto;
+    margin: 29px 0 60px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3-4 .u-sheet-1 {
-    min-height: 647px;
+    min-height: 812px;
   }
 
   .u-section-3-4 .u-text-1 {
@@ -699,12 +733,14 @@
   }
 
   .u-section-3-4 .u-image-1 {
-    width: 540px;
     height: 514px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-3-4 .u-text-2 {
-    width: 540px;
+    margin-top: 44px;
   }
 }
 
@@ -719,15 +755,15 @@
   }
 
   .u-section-3-4 .u-image-1 {
-    height: 280px;
-    width: 321px;
     margin-top: 22px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3-4 .u-text-2 {
-    width: auto;
     font-size: 1.25rem;
-    margin: 22px 0 29px;
+    margin-top: 10px;
   }
 }
 
@@ -760,23 +796,30 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-3-5 .u-sheet-1 {
+    min-height: 791px;
+  }
+
   .u-section-3-5 .u-text-1 {
     width: auto;
     margin-top: 19px;
   }
 
   .u-section-3-5 .u-image-1 {
-    margin-top: 82px;
+    margin-top: 46px;
   }
 
   .u-section-3-5 .u-text-2 {
-    width: 720px;
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 59px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3-5 .u-sheet-1 {
-    min-height: 647px;
+    min-height: 839px;
   }
 
   .u-section-3-5 .u-text-1 {
@@ -784,13 +827,14 @@
   }
 
   .u-section-3-5 .u-text-2 {
-    width: 540px;
+    margin-top: 46px;
+    margin-bottom: 55px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3-5 .u-sheet-1 {
-    min-height: 540px;
+    min-height: 541px;
   }
 
   .u-section-3-5 .u-text-1 {
@@ -805,9 +849,9 @@
   }
 
   .u-section-3-5 .u-text-2 {
-    width: auto;
     font-size: 1.25rem;
-    margin: 21px 0 58px;
+    margin-top: 14px;
+    margin-bottom: 60px;
   }
 }
 
@@ -844,7 +888,7 @@
 
 @media (max-width: 991px) {
   .u-section-3-6 .u-sheet-1 {
-    min-height: 813px;
+    min-height: 711px;
   }
 
   .u-section-3-6 .u-text-1 {
@@ -855,26 +899,31 @@
   .u-section-3-6 .u-image-1 {
     width: 499px;
     height: 434px;
-    margin-top: 119px;
+    margin-top: 57px;
   }
 
   .u-section-3-6 .u-text-2 {
-    width: 720px;
-    margin-top: 68px;
+    width: auto;
+    margin: 74px 0 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3-6 .u-sheet-1 {
-    min-height: 647px;
+    min-height: 768px;
   }
 
   .u-section-3-6 .u-text-1 {
     font-size: 2.25rem;
   }
 
+  .u-section-3-6 .u-image-1 {
+    margin-top: 37px;
+  }
+
   .u-section-3-6 .u-text-2 {
-    width: 540px;
+    margin-top: 82px;
+    margin-bottom: 60px;
   }
 }
 
@@ -895,9 +944,9 @@
   }
 
   .u-section-3-6 .u-text-2 {
-    width: auto;
     font-size: 1.25rem;
-    margin: 21px 0 60px;
+    margin-top: 70px;
+    margin-bottom: 40px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 137px;
