--- a/Brochure.css
+++ b/Brochure.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 870px;
+  min-height: 884px;
 }
 
 .u-section-1 .u-text-1 {
@@ -7,8 +7,8 @@
 }
 
 .u-section-1 .u-text-2 {
-  width: 746px;
   font-size: 1.25rem;
+  width: 793px;
   margin: 30px auto 0;
 }
 
@@ -23,39 +23,27 @@
 }
 
 .u-section-1 .u-gallery-item-1 {
-  margin-right: 33px;
+  margin-right: 13px;
 }
 
 .u-section-1 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 0;
 }
 
 .u-section-1 .u-gallery-item-2 {
-  margin-right: 33px;
+  margin-right: 13px;
 }
 
 .u-section-1 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 0;
 }
 
 .u-section-1 .u-gallery-item-3 {
-  margin-right: 33px;
+  margin-right: 13px;
 }
 
 .u-section-1 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-1 .u-gallery-item-4 {
-  margin-right: 33px;
-}
-
-.u-section-1 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 0;
 }
 
 .u-section-1 .u-gallery-nav-1 {
@@ -137,7 +125,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 920px;
+    min-height: 929px;
   }
 
   .u-section-1 .u-text-1 {
@@ -154,11 +142,22 @@
   }
 
   .u-section-1 .u-gallery-1 {
-    height: 444px;
-    width: 283px;
-    margin-top: 65px;
-    margin-left: auto;
-    margin-right: auto;
+    height: 487px;
+    margin-top: 112px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-gallery-item-1 {
+    margin-right: 73px;
+  }
+
+  .u-section-1 .u-gallery-item-2 {
+    margin-right: 73px;
+  }
+
+  .u-section-1 .u-gallery-item-3 {
+    margin-right: 73px;
   }
 
   .u-section-1 .u-gallery-nav-1 {
