--- a/nicepage.css
+++ b/nicepage.css
@@ -43998,23 +43998,24 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-2 {
   font-size: 1rem;
   letter-spacing: 0px;
+  font-weight: normal;
 }
 @media (max-width: 1199px) {
   .u-header .u-sheet-1 {
-    min-height: 187px;
+    min-height: 148px;
   }
 
   .u-header .u-image-1 {
-    margin-top: -96px;
+    margin-top: -93px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -216px;
+    margin-top: -218px;
     margin-right: 0;
   }
 
   .u-header .u-btn-2 {
-    margin-top: 53px;
+    margin-bottom: 55px;
     margin-left: 0;
   }
 }
@@ -44039,17 +44040,9 @@ a.u-link.u-text-hover-grey-90:hover {
     min-height: 203px;
   }
 
-  .u-header .u-image-1 {
-    margin-top: -93px;
-  }
-
   .u-header .u-btn-1 {
     margin-top: -121px;
     margin-right: auto;
-  }
-
-  .u-header .u-btn-2 {
-    margin-top: -41px;
   }
 }
 
@@ -44078,7 +44071,11 @@ a.u-link.u-text-hover-grey-90:hover {
     min-height: 124px;
   }
 }
-
+@media (max-width: 575px) {
+  .u-header .u-nav-2 {
+    font-weight: 700;
+  }
+}
 .u-footer .u-sheet-1 {
   min-height: 571px;
 }
